src/objects/Account_Relationship__c.object
<CustomObject>
    <description>Store the information about the relation between 2 accounts (many to many): used for External PoP ID and 3 digits for Cross Dock process.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Store the external for Ship To, PoP and Store Id. (Cross Dock)</description>
        <inlineHelpText>StStore the external for Ship To, PoP and Store Id. (Cross Dock)</inlineHelpText>
        <label>External ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <description>Accounts under this Id.</description>
        <inlineHelpText>Accounts under this Id.</inlineHelpText>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationship (Account)</relationshipLabel>
        <relationshipName>FS_Cross_Account_ID</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Secondary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationship (Secondary Account)</relationshipLabel>
        <relationshipName>Account_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Store the information about Cross Account Reference such as PoP, Ship To or Store Id.</description>
        <inlineHelpText>Store the information about Cross Account Reference such as PoP, Ship To or Store Id.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>PoP Id.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship To Id.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Id. (Cross Dock)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>Type__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Secondary_Account__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Relationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>